tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_id_empty/errors.duarouter
Error: Attribute 'id' in definition of a vehicle is empty.
Error: Invalid vehicle id ''.
Error: vehicle cannot be created
Quitting (on error).
